--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,13 +14,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:padding="8dp"
-            android:src="@mipmap/book"
-            android:layout_weight="0"
-            android:id="@+id/detail_activity_image_view"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -34,7 +27,7 @@
 
             <EditText
                 android:id="@+id/title_note"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:backgroundTint="@android:color/black"
@@ -65,7 +58,7 @@
                     android:layout_weight="1"
                     android:paddingLeft="8dp"
                     android:paddingTop="8dp"
-                    android:text="unknown date"
+                    android:text="日付を入力してください"
                     android:textColor="@android:color/black" />
             </LinearLayout>
         </LinearLayout>
